--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
