--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite-tsconfig-paths": "^5.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
@@ -48,6 +47,7 @@
     "storybook": "^8.2.8",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
